--- a/package.json
+++ b/package.json
@@ -36,9 +36,11 @@
   },
   "homepage": "https://github.com/ndp-software/keyboard-event-to-string#readme",
   "devDependencies": {
-    "@getgauge/cli": "^1.4.1",
-    "@types/node": "^16.10.2",
+    "@getgauge/cli": "latest",
+    "@types/assert": "^1.5.6",
+    "@types/node": "latest",
+    "assert": "latest",
     "gauge-ts": "latest",
-    "typescript": "^4.4.3"
+    "typescript": "latest"
   }
 }
