--- a/package.json
+++ b/package.json
@@ -41,6 +41,6 @@
     "@types/node": "latest",
     "assert": "latest",
     "gauge-ts": "latest",
-    "typescript": "latest"
+    "typescript": "^4.4.3"
   }
 }
