move the ts configs into a better place... https://docs.gauge.org/configuration.html?os=macos&language=javascript&ide=vscode

--- a/env/default/ts.properties
+++ b/env/default/ts.properties
@@ -1,6 +1,7 @@
 
 #ts.properties
 #settings related to gauge-ts.
+TS_NODE_COMPILER_OPTIONS={"lib": ["ES5","ES6", "ES7", "ES2017", "ES2018", "ES2019", "ES2020", "dom"],"experimentalDecorators": true,"emitDecoratorMetadata": true, "target": "es6", "module": "commonjs","moduleResolution": "node","outDir": "./tmp" }
 
 # Comma separated list of dirs. path should be relative to project root.
 STEP_IMPL_DIR = ./specs/steps
