add front-end as a tag for npm

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "url": "git+ssh://git@github.com/ndp-software/keyboard-event-to-string.git"
   },
   "keywords": [
+    "front-end",
     "dom",
     "events",
     "keyboard",
